<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardWrapHeight"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginTop="10dp"
    android:elevation="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintWrapHeight"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">
        <TextView
            android:id="@+id/tv_project_name"
            style="@style/TextRegularNormal"
            tools:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_spend_percentage"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        <TextView
            android:id="@+id/tv_spend_percentage"
            style="@style/TextRegularNormal"
            tools:text="@string/dummy_spend_percentage"
            app:layout_constraintTop_toTopOf="@id/tv_project_name"
            app:layout_constraintLeft_toRightOf="@id/tv_project_name"
            app:layout_constraintRight_toRightOf="parent"/>
        <ProgressBar
            android:id="@+id/pb_project"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:progress="30"
            app:layout_constraintTop_toBottomOf="@id/tv_project_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_label_period"
            style="@style/TextRegularNormal"
            android:text="@string/label_period"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pb_project"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_period"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        <TextView
            android:id="@+id/tv_period"
            style="@style/TextRegularNormal"
            tools:text="@string/dummy_period"
            app:layout_constraintTop_toTopOf="@id/tv_label_period"
            app:layout_constraintLeft_toRightOf="@id/tv_label_period"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>