<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearVerticalDefault">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>

    <androidx.core.widget.NestedScrollView
        style="@style/NestedScrollDefault"
        android:layout_below="@id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ConstraintDefault"
            android:paddingHorizontal="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                style="@style/ImageView80"
                tools:src="@color/gray"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_greeting"
                style="@style/TextBoldSuperExtraBig"
                android:text="@string/label_hi"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toRightOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextBoldBig"
                android:layout_width="0dp"
                tools:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/tv_greeting"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_greeting"/>

            <com.anangkur.materialloadingbutton.MaterialLoadingButton
                android:id="@+id/btn_edit_profile"
                style="@style/ButtonSmall"
                app:mlb_defaultColor="@color/colorPrimary"
                app:mlb_textColor="@color/white"
                app:mlb_textButton="@string/btn_edit_profile"
                app:mlb_cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintLeft_toLeftOf="@id/tv_greeting"/>

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextRegularBig"
                tools:text="@string/dummy_date"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_label_on_going_project"
                style="@style/TextRegularBig"
                android:text="@string/label_on_going_project"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_project"
                style="@style/RecyclerDefault"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/item_project"
                tools:itemCount="1"
                android:paddingBottom="10dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/tv_label_on_going_project"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.anangkur.materialloadingbutton.MaterialLoadingButton
        android:id="@+id/btn_add_project"
        style="@style/ButtonWidth280"
        app:mlb_cornerRadius="100dp"
        app:mlb_defaultColor="@color/colorPrimary"
        app:mlb_textColor="@color/white"
        app:mlb_textButton="Add Project"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>